--- a/7 Security/Network management and security.tex
+++ b/7 Security/Network management and security.tex
@@ -151,6 +151,7 @@
 			\setlength{\itemindent}{10pt}
 			\item [h1>] \texttt{ftp mininet@10.0.0.2}
 		\end{enumerate}
+		\item Download 1 file (like configuration)
 		\item Capture h1 password on wireshark output
 		
 	\end{enumerate}
@@ -175,7 +176,7 @@
 		\begin{enumerate}
 			\setlength{\itemindent}{10pt}
 			\item [h2>] \texttt{service ssh restart}
-			\item [h2>] \texttt{/usr/lib/openssl/sftp-server}
+			\item [h2>] \texttt{/usr/lib/openssl/sftp-server \&}
 		\end{enumerate}
 		\item Run \texttt{wireshark \&} on h3
 		\item Login to h2 \texttt{sftp} from h1 by:
@@ -183,6 +184,7 @@
 			\setlength{\itemindent}{10pt}
 			\item [h1>] \texttt{sftp mininet@10.0.0.2}
 		\end{enumerate}
+		\item Download 1 file (like configuration)
 		\item Capture packets on wireshark output
 		
 	\end{enumerate}
@@ -192,7 +194,7 @@
 	\subsection*{Lab Report}
 	\begin{enumerate}
 		\setlength{\itemindent}{0pt}
-		\item In each experiment, can you extract the password from the tcpdump output? Can you read the \texttt{IP, TCP, SSH} headers? Can you read the TCP data?
+		\item In each experiment, can you extract the password from the tcpdump output? Can you read the \texttt{IP, TCP, SSH} headers? Can you read the \texttt{TCP} data?
 		\item What is the client protocol (and version) used in both cases?
 		\item What is the port number used by the \texttt{ssh} server? What is the port number used by the \texttt{sftp} server? Justify your answer using the wireshark output and the \texttt{/etc/services} file.
 	\end{enumerate}
@@ -200,7 +202,7 @@
 	
 	\section*{Exercises on Firewalls and Iptables}
 	\section{Firewall basic}
-	Start mininet with default topology and Execute \texttt{iptables -L -v} on h1 and h2 to list the existing rules in the filter table. Save the output for the lab report.\\
+	Start mininet with default topology and Execute `\texttt{iptables -L -v}` on h1 and h2 to list the existing rules in the filter table. Save the output for the lab report.\\
 	\\
 	Append a rule to the end of the \texttt{INPUT} chain, by executing
 	
@@ -227,7 +229,7 @@
 		\item From the wireshark output, how many retries did \texttt{telnet} make? Explain the exponential \texttt{backoff} algorithm of \texttt{TCP} timeout and retransmission.
 	\end{enumerate}
 	
-	\section{Excercise Four}
+	\section{Firewall Action}
 	Keep previous mininet running and delete the rule created in the last exercise on h2, by:
 	
 	\begin{itemize}
@@ -266,7 +268,7 @@
 	<body>
 	<form action="/success.html"  method="POST">
 	Username:<br>
-	<input type="text" value="a.a.khordadi">
+	<input type="text" value="user">
 	<br>
 	Password:<br>
 	<input type="password" value="1234">
@@ -302,7 +304,7 @@
 	Let's start off by creating a subdirectory within Apache's configuration hierarchy to place the certificate files that we will be making:\\
 	\textbf{\$ sudo mkdir /etc/apache2/ssl} \\
 	Now that we have a location to place our key and certificate, we can create them both in one step by typing: \\
-	\textbf{\$ sudo openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/apache2/ssl/apache.key -out /etc/apache2/ssl/apache.crt} \\
+	\textbf{\$ sudo openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/apache2/ssl/apache.key -out /etc/apache2/ssl/apache.crt}\footnote{You can use simple command as: `\texttt{make-ssl-cert generate-default-snakeoil --force-overwrite}' without editing default apache ssl config} \\
 	Let's go over exactly what this means. \\
 	\begin{itemize}
 		\item \textbf{openssl}: This is the basic command line tool provided by OpenSSL to create and manage certificates, keys, signing requests, etc.
@@ -324,7 +326,7 @@
 	Organization Name (eg, company) [Internet Widgits Pty Ltd]:University of Tehran 
 	Organizational Unit Name (eg, section) []:ECE Department 
 	Common Name (e.g. server FQDN or YOUR name) []:ece.ut.ac.ir 
-	Email Address []:a.a.khordadi@ut.ac.ir 
+	Email Address []:netlab@ut.ac.ir 
 	\end{verbatim}
 	The key and certificate will be created and placed in your \texttt{/etc/apache2/ssl} directory.
 	\subsection{Configure Apache to Use SSL}
